--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.15.2
-en-core-web-sm==2.1.0
+en-core-web-sm<=2.1.0,>=1.9.9
 filelock==3.0.12
 future==0.16.0
 gunicorn==20.0.4
