--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,12 @@ pipenv==2018.11.26
 plac==0.9.6
 preshed==2.0.1
 psycopg2==2.8.5
+psycopg2-binary==2.8.5
+pycparser==2.20
+PyNaCl==1.3.0
+pyOpenSSL==19.1.0
+pyrsistent==0.16.0
+PySocks==1.7.1
 pycparser==2.20
 PyNaCl==1.3.0
 pyrsistent==0.16.0
